[PT-134] Authentication user profile (#45)
* Setup for user authentication

* Test the verify API and code refactoring

* Update swagger

* Update the secret for both jwt and generate the random string
